--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,9 @@ spotipy = "^2.22.0"
 [tool.poetry.group.dev.dependencies]
 icecream = "^2.1.3"
 
+[tool.poetry.scripts]
+monthify = "monthify.main:run"
+
 [build-system]
 requires = ["poetry-core"]
 build-backend = "poetry.core.masonry.api"
