--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,6 +1,6 @@
 [tool.poetry]
 name = "monthify"
-version = "0.2.0"
+version = "0.2.5"
 description = "Sorts liked spotify tracks into playlists by the month they were liked."
 authors = ["Madiba Hudson-Quansah <mhquansah@gmail.com>"]
 readme = "README.md"
@@ -12,9 +12,11 @@ cachetools = "^5.2.1"
 rich = "^13.1.0"
 spotipy = "^2.22.0"
 appdirs = "^1.4.4"
+toml = "^0.10.2"
 
 [tool.poetry.group.dev.dependencies]
 icecream = "^2.1.3"
+pynvim = "^0.4.3"
 
 [tool.poetry.scripts]
 monthify = "monthify.main:run"
