--- a/pyproject.toml
+++ b/pyproject.toml
@@ -17,6 +17,7 @@ toml = "^0.10.2"
 [tool.poetry.group.dev.dependencies]
 icecream = "^2.1.3"
 pynvim = "^0.4.3"
+pytest = "^7.2.2"
 
 [tool.poetry.scripts]
 monthify = "monthify.main:run"
