--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,6 +18,8 @@ toml = "^0.10.2"
 icecream = "^2.1.3"
 pynvim = "^0.4.3"
 pytest = "^7.2.2"
+pytest-mock = "^3.10.0"
+pytest-cov = "^4.0.0"
 
 [tool.poetry.scripts]
 monthify = "monthify.main:run"
