--- a/pyproject.toml
+++ b/pyproject.toml
@@ -20,6 +20,11 @@ pynvim = "^0.4.3"
 pytest = "^7.2.2"
 pytest-mock = "^3.10.0"
 pytest-cov = "^4.0.0"
+types-requests = "^2.31.0.0"
+types-toml = "^0.10.8.6"
+types-appdirs = "^1.4.3.5"
+mypy = "^1.3.0"
+types-cachetools = "^5.3.0.5"
 
 [tool.poetry.scripts]
 monthify = "monthify.main:run"
