--- a/mypy.ini
+++ b/mypy.ini
@@ -2,3 +2,6 @@
 python_version = 3.11
 warn_unused_configs = True
 disallow_incomplete_defs = True
+
+[mypy-spotipy.*]
+ignore_missing_imports = True
