--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,6 +25,7 @@ types-toml = "^0.10.8.6"
 types-appdirs = "^1.4.3.5"
 mypy = "^1.3.0"
 types-cachetools = "^5.3.0.5"
+pytest-mypy = "^0.10.3"
 
 [tool.poetry.scripts]
 monthify = "monthify.main:run"
