--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,7 @@ spotipy = "^2.22.0"
 appdirs = "^1.4.4"
 toml = "^0.10.2"
 algorithms = "^0.1.4"
+mutagen = "^1.47.0"
 
 [tool.poetry.group.dev.dependencies]
 icecream = "^2.1.3"
