--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ appdirs = "^1.4.4"
 toml = "^0.10.2"
 algorithms = "^0.1.4"
 mutagen = "^1.47.0"
+pathvalidate = "^3.2.3"
 
 [tool.poetry.group.dev.dependencies]
 icecream = "^2.1.3"
